--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.5.9'
 	implementation 'com.google.maps:google-maps-services:0.18.2'
 	
-	runtimeOnly 'org.postgresql:postgresql:42.2.23'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.29'
 	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
